# desktop-companion

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DesktopCompanion.Windows.sln  README.md  SECURITY.md  app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.base.json  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: windows-build.yml
apps/desktop-shell/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-shell-wpf/: App.xaml  App.xaml.cs  DesktopCompanion.WpfHost.csproj  MainWindow.xaml  MainWindow.xaml.cs
apps/desktop-shell-wpf/Cognition/: CompanionKernelCatalog.cs  CompanionKernelRuntime.cs  ProjectCognitionQualityGuard.cs  TuanziCognitionProfile.cs  UserWorkingStyleProfile.cs  WorkProgressArchetypeProfile.cs
apps/desktop-shell-wpf/Controls/: PetAvatarControl.xaml  PetAvatarControl.xaml.cs
apps/desktop-shell-wpf/Models/: CompanionTask.cs  (+18 more)
apps/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-shell/src-tauri/src/: main.rs
docs/: codex-thread-live-dashboard.html  final-product-structure.md  implementation-roadmap.md  mvp-architecture.md  product-positioning.md  product-principles.md  project-bucket-system.md  project-cognition.md  project-scorer-refactor-plan.md  project-state-example-phdapply.md  project-state-live-dashboard.html  project-state-scoring-v2.md  project-state-visualization.md  repo-structure.md  tuanzi-cognition-assets.md  work-progress-distillation-report.md  wpf-host-route.md
(+33 files in other folders)
