[package]
name = "desktop-shell"
version = "0.1.0"
description = "Desktop shell for the emotional task companion"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
